--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -11,7 +11,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     - name: Install Rye
-      uses: mitsuhiko/setup-rye@v1
+      uses: sksat/setup-rye@v0.8.0
     - name: Sync dependencies
       run: rye sync
     - name: Run tests
