--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -12,6 +12,10 @@ jobs:
       uses: actions/checkout@v4
     - name: Install Rye
       uses: sksat/setup-rye@v0.8.0
+    - name: Change directories
+      run: |
+        cd encoder
+        rye run python encoder.py "aaabbc"
     - name: Sync dependencies
       run: rye sync
     - name: Run tests
