--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -10,15 +10,5 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    - name: Change directories
-      run: cd encoder/
-    - name: Validate directories
+    - name: Validate directory
       run: ls
-    - name: Install Rye
-      uses: sksat/setup-rye@v0.8.0
-    - name: Validate Rye Installation
-      run: rye --version
-    - name: Sync dependencies
-      run: rye sync
-    - name: Run tests
-      run: rye run pytest -v
