--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -12,3 +12,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Validate directory
       run: ls
+    - name: Change directories
+      run: cd encoder/
+    - name: Validate directories
+      run: ls
