--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,6 +13,6 @@ jobs:
     - name: Validate directory
       run: ls
     - name: Change directories
-      run: cd encoder/
+      run: cd encoder/encoder
     - name: Validate directories
       run: ls
