Refactor directory change and validation steps
Updated directory change commands and added validation steps.

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -13,6 +13,10 @@ jobs:
     - name: Validate directory
       run: ls
     - name: Change directories
-      run: cd encoder/encoder
+      run: cd encoder/
+    - name: Validate directories
+      run: ls
+    - name: Change directories
+      run: cd encoder/
     - name: Validate directories
       run: ls
