--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -16,3 +16,9 @@ jobs:
         version: '0.12.0'
     - name: Ensure Rye is available
       run: echo "$HOME/.rye/shims" >> $GITHUB_PATH
+    - name: Sync dependencies
+      working-directory: encoder
+      run: rye sync
+    - name: Run tests
+      working-directory: encoder
+      run: rye run pytest -v
