--- a/encoder/pyproject.toml
+++ b/encoder/pyproject.toml
@@ -7,9 +7,10 @@ authors = [
 ]
 dependencies = [
     "pytest>=8.4.2",
+    "ruff>=0.14.2",
 ]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.9, <3.12"
 
 [build-system]
 requires = ["hatchling"]
