--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -22,6 +22,9 @@ jobs:
       run: |
         uv --version
         which uv
+    - name: Create virtual environment
+      working-directory: encoder
+      run: uv venv
     - name: Sync dependencies
       working-directory: encoder
       run: |
